--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -158,7 +158,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 9
+     "execution_count": 7
     }
    ],
    "source": [
@@ -175,10 +175,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            gloss variable                                           instance\n0            book        0  {'bbox': [385, 37, 885, 720], 'fps': 25, 'fram...\n1           drink        0  {'bbox': [551, 68, 1350, 1080], 'fps': 25, 'fr...\n2        computer        0  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...\n3          before        0  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...\n4           chair        0  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...\n...           ...      ...                                                ...\n79995  washington       39                                               None\n79996   waterfall       39                                               None\n79997       weigh       39                                               None\n79998  wheelchair       39                                               None\n79999     whistle       39                                               None\n\n[80000 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gloss</th>\n      <th>variable</th>\n      <th>instance</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>book</td>\n      <td>0</td>\n      <td>{'bbox': [385, 37, 885, 720], 'fps': 25, 'fram...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>drink</td>\n      <td>0</td>\n      <td>{'bbox': [551, 68, 1350, 1080], 'fps': 25, 'fr...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>computer</td>\n      <td>0</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>before</td>\n      <td>0</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>chair</td>\n      <td>0</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>79995</th>\n      <td>washington</td>\n      <td>39</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>79996</th>\n      <td>waterfall</td>\n      <td>39</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>79997</th>\n      <td>weigh</td>\n      <td>39</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>79998</th>\n      <td>wheelchair</td>\n      <td>39</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>79999</th>\n      <td>whistle</td>\n      <td>39</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n<p>80000 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "data = data.melt(id_vars=['gloss'], value_name='instance')\n",
+    "data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          gloss                                           instance\n0          book  {'bbox': [385, 37, 885, 720], 'fps': 25, 'fram...\n1         drink  {'bbox': [551, 68, 1350, 1080], 'fps': 25, 'fr...\n2      computer  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...\n3        before  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...\n4         chair  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...\n...         ...                                                ...\n70000      book  {'bbox': [28, 2, 226, 240], 'fps': 25, 'frame_...\n72000      book  {'bbox': [23, 2, 226, 240], 'fps': 25, 'frame_...\n74000      book  {'bbox': [30, 3, 228, 240], 'fps': 25, 'frame_...\n76000      book  {'bbox': [0, 3, 260, 240], 'fps': 25, 'frame_e...\n78000      book  {'bbox': [29, 4, 225, 240], 'fps': 25, 'frame_...\n\n[21083 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gloss</th>\n      <th>instance</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>book</td>\n      <td>{'bbox': [385, 37, 885, 720], 'fps': 25, 'fram...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>drink</td>\n      <td>{'bbox': [551, 68, 1350, 1080], 'fps': 25, 'fr...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>computer</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>before</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>chair</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>70000</th>\n      <td>book</td>\n      <td>{'bbox': [28, 2, 226, 240], 'fps': 25, 'frame_...</td>\n    </tr>\n    <tr>\n      <th>72000</th>\n      <td>book</td>\n      <td>{'bbox': [23, 2, 226, 240], 'fps': 25, 'frame_...</td>\n    </tr>\n    <tr>\n      <th>74000</th>\n      <td>book</td>\n      <td>{'bbox': [30, 3, 228, 240], 'fps': 25, 'frame_...</td>\n    </tr>\n    <tr>\n      <th>76000</th>\n      <td>book</td>\n      <td>{'bbox': [0, 3, 260, 240], 'fps': 25, 'frame_e...</td>\n    </tr>\n    <tr>\n      <th>78000</th>\n      <td>book</td>\n      <td>{'bbox': [29, 4, 225, 240], 'fps': 25, 'frame_...</td>\n    </tr>\n  </tbody>\n</table>\n<p>21083 rows × 2 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "data = data.dropna()\n",
+    "data = data.drop('variable', 1)\n",
+    "data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          gloss                                           instance  \\\n0          book  {'bbox': [385, 37, 885, 720], 'fps': 25, 'fram...   \n1         drink  {'bbox': [551, 68, 1350, 1080], 'fps': 25, 'fr...   \n2      computer  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...   \n3        before  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...   \n4         chair  {'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...   \n...         ...                                                ...   \n70000      book  {'bbox': [28, 2, 226, 240], 'fps': 25, 'frame_...   \n72000      book  {'bbox': [23, 2, 226, 240], 'fps': 25, 'frame_...   \n74000      book  {'bbox': [30, 3, 228, 240], 'fps': 25, 'frame_...   \n76000      book  {'bbox': [0, 3, 260, 240], 'fps': 25, 'frame_e...   \n78000      book  {'bbox': [29, 4, 225, 240], 'fps': 25, 'frame_...   \n\n                        bbox   fps  frame_end  frame_start  instance_id  \\\n0        [385, 37, 885, 720]  25.0       -1.0          1.0          0.0   \n1      [551, 68, 1350, 1080]  25.0       -1.0          1.0          0.0   \n2           [0, 0, 360, 240]  25.0     5181.0       5122.0          0.0   \n3           [0, 0, 360, 240]  25.0     1779.0       1733.0          0.0   \n4           [0, 0, 360, 240]  25.0     1889.0       1830.0          0.0   \n...                      ...   ...        ...          ...          ...   \n70000                    NaN   NaN        NaN          NaN          NaN   \n72000                    NaN   NaN        NaN          NaN          NaN   \n74000                    NaN   NaN        NaN          NaN          NaN   \n76000                    NaN   NaN        NaN          NaN          NaN   \n78000                    NaN   NaN        NaN          NaN          NaN   \n\n       signer_id    source  split  \\\n0          118.0  aslbrick  train   \n1          115.0  aslbrick    val   \n2            9.0   asl5200   test   \n3            9.0   asl5200  train   \n4            9.0   asl5200   test   \n...          ...       ...    ...   \n70000        NaN       NaN    NaN   \n72000        NaN       NaN    NaN   \n74000        NaN       NaN    NaN   \n76000        NaN       NaN    NaN   \n78000        NaN       NaN    NaN   \n\n                                                 url  variation_id video_id  \n0       http://aslbricks.org/New/ASL-Videos/book.mp4           0.0    69241  \n1      http://aslbricks.org/New/ASL-Videos/drink.mp4           0.0    69302  \n2        https://www.youtube.com/watch?v=PPmQd2zWdP0           0.0    12306  \n3        https://www.youtube.com/watch?v=pDqITge_TGs           0.0    05724  \n4        https://www.youtube.com/watch?v=PPmQd2zWdP0           0.0    09847  \n...                                              ...           ...      ...  \n70000                                            NaN           NaN      NaN  \n72000                                            NaN           NaN      NaN  \n74000                                            NaN           NaN      NaN  \n76000                                            NaN           NaN      NaN  \n78000                                            NaN           NaN      NaN  \n\n[21083 rows x 13 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gloss</th>\n      <th>instance</th>\n      <th>bbox</th>\n      <th>fps</th>\n      <th>frame_end</th>\n      <th>frame_start</th>\n      <th>instance_id</th>\n      <th>signer_id</th>\n      <th>source</th>\n      <th>split</th>\n      <th>url</th>\n      <th>variation_id</th>\n      <th>video_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>book</td>\n      <td>{'bbox': [385, 37, 885, 720], 'fps': 25, 'fram...</td>\n      <td>[385, 37, 885, 720]</td>\n      <td>25.0</td>\n      <td>-1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>118.0</td>\n      <td>aslbrick</td>\n      <td>train</td>\n      <td>http://aslbricks.org/New/ASL-Videos/book.mp4</td>\n      <td>0.0</td>\n      <td>69241</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>drink</td>\n      <td>{'bbox': [551, 68, 1350, 1080], 'fps': 25, 'fr...</td>\n      <td>[551, 68, 1350, 1080]</td>\n      <td>25.0</td>\n      <td>-1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>115.0</td>\n      <td>aslbrick</td>\n      <td>val</td>\n      <td>http://aslbricks.org/New/ASL-Videos/drink.mp4</td>\n      <td>0.0</td>\n      <td>69302</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>computer</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n      <td>[0, 0, 360, 240]</td>\n      <td>25.0</td>\n      <td>5181.0</td>\n      <td>5122.0</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>asl5200</td>\n      <td>test</td>\n      <td>https://www.youtube.com/watch?v=PPmQd2zWdP0</td>\n      <td>0.0</td>\n      <td>12306</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>before</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n      <td>[0, 0, 360, 240]</td>\n      <td>25.0</td>\n      <td>1779.0</td>\n      <td>1733.0</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>asl5200</td>\n      <td>train</td>\n      <td>https://www.youtube.com/watch?v=pDqITge_TGs</td>\n      <td>0.0</td>\n      <td>05724</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>chair</td>\n      <td>{'bbox': [0, 0, 360, 240], 'fps': 25, 'frame_e...</td>\n      <td>[0, 0, 360, 240]</td>\n      <td>25.0</td>\n      <td>1889.0</td>\n      <td>1830.0</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>asl5200</td>\n      <td>test</td>\n      <td>https://www.youtube.com/watch?v=PPmQd2zWdP0</td>\n      <td>0.0</td>\n      <td>09847</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>70000</th>\n      <td>book</td>\n      <td>{'bbox': [28, 2, 226, 240], 'fps': 25, 'frame_...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>72000</th>\n      <td>book</td>\n      <td>{'bbox': [23, 2, 226, 240], 'fps': 25, 'frame_...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>74000</th>\n      <td>book</td>\n      <td>{'bbox': [30, 3, 228, 240], 'fps': 25, 'frame_...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>76000</th>\n      <td>book</td>\n      <td>{'bbox': [0, 3, 260, 240], 'fps': 25, 'frame_e...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>78000</th>\n      <td>book</td>\n      <td>{'bbox': [29, 4, 225, 240], 'fps': 25, 'frame_...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>21083 rows × 13 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "data = data.join(pd.DataFrame.from_records(data['instance']))\n",
+    "data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          gloss                   bbox video_id  frame_end  frame_start\n0          book    [385, 37, 885, 720]    69241       -1.0          1.0\n1         drink  [551, 68, 1350, 1080]    69302       -1.0          1.0\n2      computer       [0, 0, 360, 240]    12306     5181.0       5122.0\n3        before       [0, 0, 360, 240]    05724     1779.0       1733.0\n4         chair       [0, 0, 360, 240]    09847     1889.0       1830.0\n...         ...                    ...      ...        ...          ...\n70000      book                    NaN      NaN        NaN          NaN\n72000      book                    NaN      NaN        NaN          NaN\n74000      book                    NaN      NaN        NaN          NaN\n76000      book                    NaN      NaN        NaN          NaN\n78000      book                    NaN      NaN        NaN          NaN\n\n[21083 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gloss</th>\n      <th>bbox</th>\n      <th>video_id</th>\n      <th>frame_end</th>\n      <th>frame_start</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>book</td>\n      <td>[385, 37, 885, 720]</td>\n      <td>69241</td>\n      <td>-1.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>drink</td>\n      <td>[551, 68, 1350, 1080]</td>\n      <td>69302</td>\n      <td>-1.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>computer</td>\n      <td>[0, 0, 360, 240]</td>\n      <td>12306</td>\n      <td>5181.0</td>\n      <td>5122.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>before</td>\n      <td>[0, 0, 360, 240]</td>\n      <td>05724</td>\n      <td>1779.0</td>\n      <td>1733.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>chair</td>\n      <td>[0, 0, 360, 240]</td>\n      <td>09847</td>\n      <td>1889.0</td>\n      <td>1830.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>70000</th>\n      <td>book</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>72000</th>\n      <td>book</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>74000</th>\n      <td>book</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>76000</th>\n      <td>book</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>78000</th>\n      <td>book</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>21083 rows × 5 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "data = data.loc[:, ['gloss', 'bbox', 'video_id', 'frame_end', 'frame_start']]\n",
+    "data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "outputs": [],
    "source": [
-    "data.to_csv(OUTPUT_FILE)"
+    "data.to_csv(OUTPUT_FILE, index=False)"
    ],
    "metadata": {
     "collapsed": false,
