--- a/playground.ipynb
+++ b/playground.ipynb
@@ -22,109 +22,256 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "      video_id gloss                  bbox frame_start frame_end\n0        00295     a      [0, 0, 360, 240]         1.0      23.0\n1        01610     a   [124, 33, 565, 480]         1.0      -1.0\n2        01611     a    [122, 8, 462, 360]         1.0      -1.0\n3        01612     a     [85, 7, 217, 192]         1.0      -1.0\n4        01613     a   [219, 32, 916, 720]         1.0      -1.0\n...        ...   ...                   ...         ...       ...\n18710    66825  zero   [159, 12, 461, 370]         1.0      -1.0\n18711    67017  zero    [71, 19, 372, 360]         1.0      -1.0\n18712    67840  zero   [100, 13, 382, 360]         1.0      -1.0\n18713    68193  zero  [334, 37, 1000, 720]         1.0      -1.0\n18714    68862  zero   [101, 15, 535, 357]         1.0      55.0\n\n[18715 rows x 5 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>video_id</th>\n      <th>gloss</th>\n      <th>bbox</th>\n      <th>frame_start</th>\n      <th>frame_end</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>00295</td>\n      <td>a</td>\n      <td>[0, 0, 360, 240]</td>\n      <td>1.0</td>\n      <td>23.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>01610</td>\n      <td>a</td>\n      <td>[124, 33, 565, 480]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>01611</td>\n      <td>a</td>\n      <td>[122, 8, 462, 360]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>01612</td>\n      <td>a</td>\n      <td>[85, 7, 217, 192]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>01613</td>\n      <td>a</td>\n      <td>[219, 32, 916, 720]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>18710</th>\n      <td>66825</td>\n      <td>zero</td>\n      <td>[159, 12, 461, 370]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>18711</th>\n      <td>67017</td>\n      <td>zero</td>\n      <td>[71, 19, 372, 360]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>18712</th>\n      <td>67840</td>\n      <td>zero</td>\n      <td>[100, 13, 382, 360]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>18713</th>\n      <td>68193</td>\n      <td>zero</td>\n      <td>[334, 37, 1000, 720]</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>18714</th>\n      <td>68862</td>\n      <td>zero</td>\n      <td>[101, 15, 535, 357]</td>\n      <td>1.0</td>\n      <td>55.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>18715 rows × 5 columns</p>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>gloss</th>\n",
+       "      <th>bbox</th>\n",
+       "      <th>frame_start</th>\n",
+       "      <th>frame_end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00295</td>\n",
+       "      <td>a</td>\n",
+       "      <td>[0, 0, 360, 240]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01610</td>\n",
+       "      <td>a</td>\n",
+       "      <td>[124, 33, 565, 480]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01611</td>\n",
+       "      <td>a</td>\n",
+       "      <td>[122, 8, 462, 360]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01612</td>\n",
+       "      <td>a</td>\n",
+       "      <td>[85, 7, 217, 192]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01613</td>\n",
+       "      <td>a</td>\n",
+       "      <td>[219, 32, 916, 720]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18710</th>\n",
+       "      <td>66825</td>\n",
+       "      <td>zero</td>\n",
+       "      <td>[159, 12, 461, 370]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18711</th>\n",
+       "      <td>67017</td>\n",
+       "      <td>zero</td>\n",
+       "      <td>[71, 19, 372, 360]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18712</th>\n",
+       "      <td>67840</td>\n",
+       "      <td>zero</td>\n",
+       "      <td>[100, 13, 382, 360]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18713</th>\n",
+       "      <td>68193</td>\n",
+       "      <td>zero</td>\n",
+       "      <td>[334, 37, 1000, 720]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18714</th>\n",
+       "      <td>68862</td>\n",
+       "      <td>zero</td>\n",
+       "      <td>[101, 15, 535, 357]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>18715 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id gloss                  bbox frame_start frame_end\n",
+       "0        00295     a      [0, 0, 360, 240]         1.0      23.0\n",
+       "1        01610     a   [124, 33, 565, 480]         1.0      -1.0\n",
+       "2        01611     a    [122, 8, 462, 360]         1.0      -1.0\n",
+       "3        01612     a     [85, 7, 217, 192]         1.0      -1.0\n",
+       "4        01613     a   [219, 32, 916, 720]         1.0      -1.0\n",
+       "...        ...   ...                   ...         ...       ...\n",
+       "18710    66825  zero   [159, 12, 461, 370]         1.0      -1.0\n",
+       "18711    67017  zero    [71, 19, 372, 360]         1.0      -1.0\n",
+       "18712    67840  zero   [100, 13, 382, 360]         1.0      -1.0\n",
+       "18713    68193  zero  [334, 37, 1000, 720]         1.0      -1.0\n",
+       "18714    68862  zero   [101, 15, 535, 357]         1.0      55.0\n",
+       "\n",
+       "[18715 rows x 5 columns]"
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv(OUTPUT_DIR, dtype=str)\n",
     "data.reset_index()\n",
     "data"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "video_id                    00421\ngloss                       about\nbbox           [54, 16, 219, 192]\nframe_start                   1.0\nframe_end                     5.0\nName: 35, dtype: object"
+      "text/plain": [
+       "video_id                    00421\n",
+       "gloss                       about\n",
+       "bbox           [54, 16, 219, 192]\n",
+       "frame_start                   1.0\n",
+       "frame_end                     5.0\n",
+       "Name: 35, dtype: object"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "vid1 = data.iloc[35]\n",
     "vid1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "'D:\\\\Documents\\\\Education\\\\Diploma Competitions\\\\Splash Awards 2020\\\\SignQuest-SignTranslator\\\\input\\\\videos\\\\00421.mp4'"
+      "text/plain": [
+       "'D:\\\\Documents\\\\Education\\\\Diploma Competitions\\\\Splash Awards 2020\\\\SignQuest-SignTranslator\\\\input\\\\videos\\\\00421.mp4'"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "video_dir = f'D:\\Documents\\Education\\Diploma Competitions\\Splash Awards 2020\\SignQuest-SignTranslator\\input\\\\videos\\\\' + str(vid1.video_id) + '.mp4'\n",
     "video_dir"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "34.0"
+      "text/plain": [
+       "34.0"
+      ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cap = cv2.VideoCapture(video_dir)\n",
     "frame_count = cap.get(cv2.CAP_PROP_FRAME_COUNT)\n",
     "frame_count"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "for i in range(int(frame_count)):\n",
@@ -138,14 +285,7 @@
     "    cv2.imwrite(str(vid1.video_id)+'_frame_' + str(i) + '.jpg', gray)\n",
     "        \n",
     "cap.release()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -157,25 +297,25 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
